2010-04-24  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        SVGPaintServer needs to be converted to the new RenderSVGResource* system
        https://bugs.webkit.org/show_bug.cgi?id=37986

        Huge speedup for SVG painting using paint servers (gradient/patterns). Cache underlying
        WebCore::Gradient/Pattern datastructures, do not rebuild them on every painting. This marks
        the finish of the SVGResource -> RenderSVGResource transition.

        Outline of same key changes:
        - RenderSVGResource is an abstract base class now, and the previous class is now named RenderSVGResourceContainer
          All resources except RenderSVGResourceSolidColor now inherit from RenderSVGResourceContainer, as they are all
          associated with a SVG*Element class. RenderSVGResourceSolidColor inherits from RenderSVGResource, and is not
          associated with any SVG*Element class. RenderSVGResourceSolidColor is not a render tree object, despite its name.
          The reason for that is consistency with all other painting resources.
        - RenderSVGResourceSolidColor does not live in the render tree, and exists only as static object, which is shared
          and always used when filling/stroking with solid colors - just like the old SVGPaintServerSolid.
        - RenderSVGResourceGradient/RenderSVGResourcePattern now store the underlying WebCore::Gradient/Pattern object
          instead of rebuilding it everytime we're asked to paint -> this is the main difference with the old concept, leading
          to much faster speed.
        - SVGResource has vanished. All resources (clipper/filter/marker/masker/gradient/pattern) now share the same codepaths
          to handle updates and client invalidation - which is a huge benefit, and makes the code easier to understand.

        * Android.mk: Remove svg/graphics/SVGResource*, svg/graphics/SVGPaintServer.h from build.
        * GNUmakefile.am: Ditto.